# multi-agent-github-issue-triage-copilot

./: .gitignore  README.md
agentforge/logging/: debug_tracer.py
crews/fastapi_issue_triage/: .env.example  README.md  pyproject.toml  run.sh
crews/fastapi_issue_triage/config/: agents.yaml  tasks.yaml
crews/fastapi_issue_triage/src/fastapi_issue_triage/: __init__.py  batch.py  crew.py  eval.py  main.py
crews/fastapi_issue_triage/src/fastapi_issue_triage/tools/: __init__.py  custom_tools.py
